examples/routes/route-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started-ip
spec:
  ingressClassName: apisix
  rules:
    - http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  number: 80
            path: /ip
            pathType: Exact
